--- a/config/pjsip.conf
+++ b/config/pjsip.conf
@@ -1,17 +1,376 @@
 ;-------------------------------- PrivateDial ----------------------------------
 ; Filename: pjsip.conf
-; This file is an Asterisk configuration file, part of the PrivateDial suite.
-; It is loaded by the chan_pjsip.so module.
-;
-
-;-------------------------------- global ---------------------------------------
+; Asterisk PJSIP configuration file.
+;-------------------------------- GLOBAL ---------------------------------------
+; Esta seção define parâmetros globais do módulo PJSIP no Asterisk.
+; As configurações aqui afetam TODO o funcionamento do PJSIP —
+; incluindo registro, sinalização e comportamento padrão dos transportes.
 
 [global]
-type = global
-user_agent = Platform PBX
+type=global                      ; Indica que este é o contexto global do PJSIP.
 
-;-------------------------------- includes -------------------------------------
+; O campo "user_agent" define o nome que o Asterisk apresentará
+; nas mensagens SIP enviadas a outros dispositivos (por exemplo, em respostas INVITE e REGISTER).
+; Em outras palavras, é a "identificação" do seu servidor SIP.
+;
+; Exemplo: Quando um cliente SIP se conecta, ele verá algo como:
+;   SIP/2.0 200 OK
+;   User-Agent: Platform PBX
+;
+; Motivos para definir um user_agent personalizado:
+;   - Identificar seu sistema em logs e depurações.
+;   - Diferenciar sua PBX de outros servidores ou versões de Asterisk.
+;   - Evitar expor a versão exata do Asterisk por motivos de segurança.
+;
+; Você pode usar um nome genérico (como abaixo) ou personalizado:
+;   user_agent=Switch  PBX
+;   user_agent=Control SIP Server
+;
+user_agent=Platform PBX
 
 
 
-#tryinclude pjsip_transport.conf
+; ==========================
+; TRANSPORTES DE REDE
+; ==========================
+; Esta seção define como o Asterisk se comunica com os clientes SIP.
+; Cada "transport" representa um tipo de conexão:
+;   - UDP: usado por softphones e telefones SIP comuns.
+;   - WS: usado por navegadores WebRTC (via WebSocket).
+; É possível ter ambos ativos ao mesmo tempo.
+; ===============================================================
+
+
+; --------------------------------------------------------------
+; TRANSPORTE WEBSOCKET (usado para WebRTC)
+; --------------------------------------------------------------
+[transport-ws]
+type=transport
+protocol=ws                      ; Protocolo WebSocket (não seguro, ws://)
+bind=0.0.0.0:8088                ; O Asterisk escutará na porta 8088 em todas as interfaces
+
+; IP público que será anunciado para os clientes WebRTC.
+; Essencial quando o servidor está atrás de NAT ou rodando em nuvem.
+external_signaling_address=56.125.214.225
+
+; IP público usado para envio/recebimento de mídia (áudio/vídeo RTP).
+; Necessário para que o áudio funcione corretamente em conexões externas.
+external_media_address=56.125.214.225
+
+; DICA:
+; - Se o Asterisk estiver atrás de roteador, use o IP público da WAN.
+; - Se estiver em uma VPS com IP fixo, use o IP público da VPS.
+; - Caso utilize HTTPS/WSS, configure também transport-wss (TLS) e as chaves DTLS.
+
+
+; --------------------------------------------------------------
+; TRANSPORTE UDP (usado por telefones SIP tradicionais)
+; --------------------------------------------------------------
+[transport-udp]
+type=transport
+protocol=udp                    ; Protocolo padrão SIP (sem criptografia)
+bind=0.0.0.0:5060               ; Porta SIP padrão. Escuta em todas as interfaces.
+
+; IP público usado nas mensagens SIP (INVITE, REGISTER, etc.)
+; Garante que clientes externos consigam responder corretamente.
+external_signaling_address=56.125.214.225
+
+; IP público usado na negociação de mídia (SDP/RTP).
+; Sem isso, chamadas externas podem ficar sem áudio.
+external_media_address=56.125.214.225
+
+; (Opcional, mas altamente recomendado)
+; Define a rede local (LAN) onde o Asterisk entende que não há NAT.
+; Assim, ele usa o IP interno para clientes dessa rede e o IP público para os demais.
+; Ajuste conforme sua topologia de rede.
+; local_net=192.168.0.0/24
+
+
+
+
+
+; ==========================
+; Autenticação
+; ==========================
+; Ramais 5000–5003
+[auth5000]
+type=auth
+auth_type=userpass
+username=5000
+password=Senha5000
+
+[auth5001]
+type=auth
+auth_type=userpass
+username=5001
+password=Senha5001
+
+[auth5002]
+type=auth
+auth_type=userpass
+username=5002
+password=Senha5002
+
+[auth5003]
+type=auth
+auth_type=userpass
+username=5003
+password=Senha5003
+
+
+; Ramais 1000–1010
+[auth1000]
+type=auth
+auth_type=userpass
+username=1000
+password=Senha1000
+
+[auth1001]
+type=auth
+auth_type=userpass
+username=1001
+password=Senha1001
+
+[auth1002]
+type=auth
+auth_type=userpass
+username=1002
+password=Senha1002
+
+[auth1003]
+type=auth
+auth_type=userpass
+username=1003
+password=Senha1003
+
+[auth1004]
+type=auth
+auth_type=userpass
+username=1004
+password=Senha1004
+
+[auth1005]
+type=auth
+auth_type=userpass
+username=1005
+password=Senha1005
+
+
+; Ramais 9000–9001
+[auth9000]
+type=auth
+auth_type=userpass
+username=9000
+password=Senha9000
+
+[auth9001]
+type=auth
+auth_type=userpass
+username=9001
+password=Senha9001
+
+; ==========================
+; AOR (Address of Record)
+; ==========================
+; Um AOR representa um "endereço lógico" de um ramal/endereço SIP.
+; Ele armazena os contatos ativos (IP/porta) de um endpoint registrado.
+; Quando alguém liga para este ramal, o Asterisk consulta o AOR
+; para descobrir para onde enviar a chamada.
+;
+; 
+; Ramais 5000–5003 (WebRTC via SIP sobre WebSocket)
+; 
+; Esses ramais usam tecnologia WebRTC para comunicação em tempo real.
+; A sinalização SIP é enviada através de WebSocket (porta 8088),
+; permitindo que navegadores ou clientes WebRTC se conectem diretamente ao Asterisk.
+; Cada ramal é configurado como endpoint PJSIP e associado a um AOR correspondente,
+; que gerencia o registro e o roteamento de chamadas para o dispositivo.
+; Suporta áudio via codecs ulaw, alaw e opus, com transporte seguro de mídia.
+[5000]
+type=aor
+max_contacts=1
+
+[5001]
+type=aor
+max_contacts=1
+
+[5002]
+type=aor
+max_contacts=1
+
+[5003]
+type=aor
+max_contacts=1
+
+; 1000–1005
+[1000]
+type=aor
+max_contacts=1
+[1001]
+type=aor
+max_contacts=1
+[1002]
+type=aor
+max_contacts=1
+[1003]
+type=aor
+max_contacts=1
+[1004]
+type=aor
+max_contacts=1
+[1005]
+type=aor
+max_contacts=1
+
+
+; 9000–9001
+[9000]
+type=aor
+max_contacts=1
+[9001]
+type=aor
+max_contacts=1
+
+; ==========================
+; ENDPOINTS
+; ==========================
+; 5000–5003 (WebRTC)
+[5000]
+type=endpoint
+aors=5000
+auth=auth5000
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw,opus
+webrtc=yes
+direct_media=no
+transport=transport-ws
+rewrite_contact=yes
+
+[5001]
+type=endpoint
+aors=5001
+auth=auth5001
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw,opus
+webrtc=yes
+direct_media=no
+transport=transport-ws
+rewrite_contact=yes
+
+[5002]
+type=endpoint
+aors=5002
+auth=auth5002
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw,opus
+webrtc=yes
+direct_media=no
+transport=transport-ws
+rewrite_contact=yes
+
+[5003]
+type=endpoint
+aors=5003
+auth=auth5003
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw,opus
+webrtc=yes
+direct_media=no
+transport=transport-ws
+rewrite_contact=yes
+
+; 1000–1005
+[1000]
+type=endpoint
+aors=1000
+auth=auth1000
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+
+[1001]
+type=endpoint
+aors=1001
+auth=auth1001
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+
+[1002]
+type=endpoint
+aors=1002
+auth=auth1002
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+
+[1003]
+type=endpoint
+aors=1003
+auth=auth1003
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+
+[1004]
+type=endpoint
+aors=1004
+auth=auth1004
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+
+[1005]
+type=endpoint
+aors=1005
+auth=auth1005
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+
+
+[9000]
+type=endpoint
+aors=9000
+auth=auth9000
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+rewrite_contact=yes
+
+[9001]
+type=endpoint
+aors=9001
+auth=auth9001
+context=from-pjsip
+disallow=all
+allow=ulaw,alaw
+webrtc=no
+direct_media=no
+transport=transport-udp
+rewrite_contact=yes
+
